Switch to latest Flot lib Added angular local storage module refactored data access and plottong service impl

--- a/app/views/partial/graf.html
+++ b/app/views/partial/graf.html
@@ -1,4 +1,4 @@
 <div class="hero-unit">    
-    <p id="{{grafId}}" style="width:800px;height:250px;"><img src="http://placehold.it/800x250"></p>        
+    <p id="{{grafId}}" style="font-size:12px;width:800px;height:250px;"><img src="http://placehold.it/800x250"></p>        
 </div>
         
