Added timeout to directive for initial plotting

--- a/app/views/partial/grafs.html
+++ b/app/views/partial/grafs.html
@@ -1,6 +1,6 @@
 <div class="span9">
     <p>{{parameters.sensorName}}</p>
     <!-- declare any number of graphs per sensor -->
-    <zensgraf graf-id="{{parameters.domIdPrefix}}Day" popluate-sensor=sensors.plot(sensor)></zensgraf>
+    <zensgraf graf-id="{{parameters.domIdPrefix}}Day"></zensgraf>
     <zensgraf graf-id="{{parameters.domIdPrefix}}Month"></zensgraf>
 </div>
